Header Title and signin and signup button added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 
 <head>
     <!-- TODO: Include Font Awesome file here -->
-    <!-- TODO: Include Google Fonts file here -->
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montez&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    
+    <!-- BootstrapCDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/header.css">
 </head>
 
 <body>
-    <!-- TODO: Include all your code for the header and home page here -->
+    <div id="mainContainer">
+
+        <!-- Header -->
+        <div class="header">
+            <div class="headerLeft">
+                <p class="title">ScriBBler</p>
+                <p class="subTitle">Explore, Imagine, Create</p>
+            </div>
+            <div class="headerRight">
+                <button id="buttonForSignUp" class="btn btn-primary">Sign Up</button>
+                <button id="buttonForSignIn" class="btn btn-primary">Sign In</button>
+            </div>
+
+        </div>
+        <!--  All Posts & Create Post button -->
+        <div class="postButtons">
+        </div>
+    </div>
+    <!-- Sign In modal -->
+    <div></div>
+    <!--  Sign Up modal  -->
+    <div></div>
+
+    <!-- Create Post modal -->
+    <div></div>
 </body>
 
 </html>
