Modified modal code

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
     </div>
     <!-- Sign In modal -->
-    <div class="modal modal-dialog modal-dialog-centered fade" id="SignInModal" tabindex="-1" role="dialog" aria-labelledby="SignInModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" id="SignInModal" tabindex="-1" role="dialog" aria-labelledby="SignInModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="SignInModalLabel">Welcome Back!</h5>
@@ -71,8 +71,8 @@
         </div>
       </div>
     <!--  Sign Up modal  -->
-    <div class="modal modal-dialog modal-dialog-centered fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+    <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="SignUpModalLabel">Get Started</h5>
