--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
                 <button id="buttonForSignIn" class="btn btn-primary" data-toggle="modal" data-target="#SignInModal">Sign In</button>
             </div>
 
-        </div>
+        </div >
         <!--  All Posts & Create Post button -->
         <div class="postButtons">
+          <button type="button" class="btn btn-warning">All Posts</button>
+          <button type="button" class="btn btn-warning">Create Posts</button>
+
+
         </div>
     </div>
     <!-- Sign In modal -->
