--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <!-- Custom Css -->
     <link rel="stylesheet" href="./styles/css/index.css">
     <link rel="stylesheet" href="./styles/css/header.css">
-
-
-    
 </head>
 
 <body>
@@ -40,7 +37,7 @@
         <!--  All Posts & Create Post button -->
         <div class="postButtons">
           <button type="button" class="btn btn-warning">All Posts</button>
-          <button type="button" class="btn btn-warning">Create Posts</button>
+          <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#createPostModal" >Create Posts</button>
 
 
         </div>
@@ -111,7 +108,33 @@
     </div>
 
     <!-- Create Post modal -->
-    <div></div>
+    <div>
+      <div class="modal fade" id="createPostModal" tabindex="-1" role="dialog" aria-labelledby="createPostModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg ">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="createPostModalLabel">Pen Your Post</h5>
+              <button type="button" class="close"  aria-label="Close" data-dismiss="modal" aria-label="Close">
+                <span><i class="fa fa-times" aria-hidden="true"></i></span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                      <label for="createPostTitle">Title</label>
+                      <input type="text" class="form-control" id="createPostTitle" required placeholder="Enter title of your post">
+                    </div>
+                    <div class="form-group">
+                      <label for="createPostContents">Contents</label>
+                      <textarea class="form-control" id="createPostContents" placeholder="Enter contents of your post" required rows="10" cols="50"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-success " id="createPostButton" >Create</button>
+                  </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
    
 </body>
