All post button mapped with the postslist html page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div >
         <!--  All Posts & Create Post button -->
         <div class="postButtons">
-          <button type="button" class="btn btn-warning">All Posts</button>
+          <button type="button" class="btn btn-warning" onclick="allPostPage()">All Posts</button>
           <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#createPostModal" >Create Posts</button>
 
 
@@ -136,7 +136,7 @@
       </div>
     </div>
 
-   
+<script src="./scripts/index.js"></script>
 </body>
 
 </html>
