Post listing with delete modula setup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div id="mainContainer">
+    <div id="mainContainer" class="container-fluid">
 
         <!-- Header -->
         <div class="header">
@@ -136,6 +136,7 @@
       </div>
     </div>
 
+    <!-- Custom Scripts -->
 <script src="./scripts/index.js"></script>
 </body>
 
