--- a/html/postslist.html
+++ b/html/postslist.html
@@ -37,7 +37,7 @@
           <!-- list of all posts starts here -->
             <div class="row row-cols-1 row-cols-md-2 center">
                 <!-- Poat 1 -->
-                <div class="col mb-4 ">
+                <div class="col mb-4 " id="post-1">
                     <div class="card mb-2" style="max-width: 600px;">
                         <div class="row no-gutters">
                           <div class="col-md-4 center">
@@ -47,7 +47,7 @@
                             <div class="card-body bg-light">
                                 <div class="cardHeader">
                                     <p class="card-text text-muted cardtitle">‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>
-                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal">
+                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" data-toggle="modal" data-target="#DeleteModal" data-id="post-1">
                                         <span>
                                                 <i class="fa fa-trash-o fa-lg " aria-hidden="true"></i>
                                         </span>
@@ -65,7 +65,7 @@
                       </div>
                 </div>
                 <!-- Post 2 -->
-                <div class="col mb-4 ">
+                <div class="col mb-4 " id="post-2">
                     <div class="card mb-3" style="max-width: 600px;">
                         <div class="row no-gutters">
                           <div class="col-md-4 center">
@@ -75,7 +75,7 @@
                             <div class="card-body bg-light">
                                 <div class="cardHeader">
                                     <p class="card-text text-muted cardtitle">What is linting and how can it save you time?</p>
-                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal">
+                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal" data-id="post-2">
                                         <span>
                                                 <i class="fa fa-trash-o fa-lg " aria-hidden="true"></i>
                                         </span>
@@ -94,7 +94,7 @@
                       </div>
                 </div>
                 <!-- Post 3 -->
-                <div class="col mb-4 ">
+                <div class="col mb-4 " id="post-3">
                     <div class="card mb-3" style="max-width: 600px;">
                         <div class="row no-gutters ">
                           <div class="col-md-4 center">
@@ -104,7 +104,7 @@
                             <div class="card-body bg-light">
                                 <div class="cardHeader">
                                     <p class="card-text text-muted cardtitle">How to Get More Views on Your Tech Blog</p>
-                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal">
+                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal" data-id="post-3">
                                         <span>
                                                 <i class="fa fa-trash-o fa-lg " aria-hidden="true"></i>
                                         </span>
@@ -122,7 +122,7 @@
                       </div>
                 </div>
                 <!-- Post 4 -->
-                <div class="col mb-4 ">
+                <div class="col mb-4 " id="post-4">
                     <div class="card mb-3 " style="max-width: 600px;">
                         <div class="row no-gutters">
                           <div class="col-md-4 center">
@@ -132,7 +132,7 @@
                             <div class="card-body bg-light">
                                 <div class="cardHeader">
                                     <p class="card-text text-muted cardtitle">How to write easily describable code</p>
-                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal">
+                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal" data-id="post-4">
                                         <span>
                                                 <i class="fa fa-trash-o fa-lg " aria-hidden="true"></i>
                                         </span>
@@ -151,7 +151,7 @@
                       </div>
                 </div>
                 <!-- Post 5 -->
-                <div class="col mb-4 ">
+                <div class="col mb-4 " id="post-5">
                     <div class="card mb-3" style="max-width: 750px;">
                         <div class="row no-gutters">
                           <div class="col-md-4 center">
@@ -161,7 +161,7 @@
                             <div class="card-body bg-light">
                                 <div class="cardHeader">
                                     <p class="card-text text-muted cardtitle">Everything you should know about ‘module’ & <br> ‘require’ in Node.js</p>
-                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal">
+                                    <button type="button" class=" btn cardIcon" data-dismiss="modal" aria-label="Close" data-toggle="modal" data-target="#DeleteModal" data-id="post-5">
                                         <span>
                                                 <i class="fa fa-trash-o fa-lg " aria-hidden="true"></i>
                                         </span>
@@ -258,13 +258,15 @@
               <h6>Are you sure you want to delete this post?</h6>
             </div>
             <div class="footerButton">
-                <button type="button" class="btn btn-success btn-lg deleteYesButton">Yes</button>
+                <button type="button" class="btn btn-success btn-lg deleteYesButton" data-dismiss="modal" >Yes</button>
                 <button type="button" class="btn btn-danger btn-lg deleteNoButton" data-dismiss="modal">No</button>
             </div>
           </div>
         </div>
       </div>
 
+      <!-- Scripts -->
+      <script src="../scripts/postslist.js"></script>
 </body>
 
 </html>
