--- a/html/postslist.html
+++ b/html/postslist.html
@@ -48,14 +48,14 @@
                                 <div class="cardHeader">
                                     <p class="card-text text-muted cardtitle">‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>
                                     <button type="button" class=" btn cardIcon" data-dismiss="modal" data-toggle="modal" data-target="#DeleteModal" data-id="post-1">
-                                        <span>
+                                        <span >
                                                 <i class="fa fa-trash-o fa-lg " aria-hidden="true"></i>
                                         </span>
                                     </button>
                                 </div>
                                 <div class="cardHeader">
                                     <p class="card-text cardtitle">Since JavaScript does not have any type-checking, either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all the three keywords are used for the same purpose, they are different.</p>
-                                    <span class="cardIcon">
+                                    <span class="cardIcon" onclick="postPage()">
                                         <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                     </span>
                                 </div>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="cardHeader">
                                     <p class="card-text cardtitle">One of the biggest challenges in software development is time. It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>
-                                    <span class="cardIcon">
+                                    <span class="cardIcon" onclick="postPage()">
                                         <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                     </span>
                                 </div>
@@ -112,7 +112,7 @@
                                 </div>
                               <div class="cardHeader">
                                 <p class="card-text cardtitle">If you're a developer with a Twitter account, br you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very least, a recognizable name in the industry.</p>
-                                <span class="cardIcon">
+                                <span class="cardIcon" onclick="postPage()">
                                   <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                 </span>
                               </div>  
@@ -141,7 +141,7 @@
                                 <div class="cardHeader">
                                     <p class="card-text cardtitle">When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which
                                         leads to confusion when discussing the code.</p>
-                                        <span class="cardIcon">
+                                        <span class="cardIcon" onclick="postPage()">
                                             <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                         </span>
                                 </div>
@@ -152,7 +152,7 @@
                 </div>
                 <!-- Post 5 -->
                 <div class="col mb-4 " id="post-5">
-                    <div class="card mb-3" style="max-width: 750px;">
+                    <div class="card mb-3" style="max-width: 600px;">
                         <div class="row no-gutters">
                           <div class="col-md-4 center">
                             <p>Srishti Gupta</p>
@@ -170,7 +170,7 @@
                                 <div class="cardHeader">
                                     <p class="card-text cardtitle">Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module
                                         named xyz.</p>
-                                        <span class="cardIcon">
+                                        <span class="cardIcon" onclick="postPage()">
                                             <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                         </span>
                                 </div>
