Header and post tile with edit and save functionality added

--- a/html/postslist.html
+++ b/html/postslist.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<html lang="en"></html>
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Posts List</title>
     <!--  Font Awesome  -->
     <link rel="stylesheet" href="../styles/css/font-awesome.min.css">
     
