--- a/html/post.html
+++ b/html/post.html
@@ -64,7 +64,19 @@
           <button type="button" id="postLikeButton" class="btn btn-danger" onclick="likeCount()"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Like</button>
           <p class="text-muted" id="likeDisplay">Be the first one to like this!</p>
         </div>
-        
+        <!-- Comment Section -->
+        <div class="container">
+          <div class="commentInput">
+            <textarea id="commentTextArea" rows="3" cols="80" placeholder="Leave a comment..."></textarea>
+          </div>
+          <div >
+            <button type="button" id="commentButton" class="btn btn-danger" onclick="comment()">Comment</button>
+          </div>
+        </div>
+        <div class="container">
+          <h6>All Comments</h6>
+          <div id="comment-display"></div>
+        </div>
     </div>
 
 
